ingress_routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    # Optional: If your app doesn't expect the /api prefix, use a rewrite
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: abhi-ckad.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
      - path: /resume
        pathType: Prefix
        backend:
          service:
            name: Display-Resume
            port:
              number: 80
